Created Login and Register Pages, updated GetBookDetailsAsync method to accept a string as a userId, expanded BookDetailsViewModel, removed validation attributes from the BookIndexViewModel (no input, so no validation needed), created an Account Controller to handle logout

--- a/LibraryManagement.Web/Areas/Identity/Pages/Account/_ViewImports.cshtml
+++ b/LibraryManagement.Web/Areas/Identity/Pages/Account/_ViewImports.cshtml
@@ -1,5 +1,4 @@
-﻿@using LibraryManagement.Web
-@using LibraryManagement.Web.ViewModels
+﻿@using LibraryManagement.Web.Areas.Identity.Pages.Account
 @using Microsoft.AspNetCore.Identity
 @using LibraryManagement.Web.Areas.Identity
 @using LibraryManagement.Web.Areas.Identity.Pages
