--- a/LibraryManagement.Web/Views/Book/Index.cshtml
+++ b/LibraryManagement.Web/Views/Book/Index.cshtml
@@ -4,6 +4,7 @@
 {
     <div>
         <h3>@book.Title</h3>
+        <p>@book.ImageUrl</p>
         <p>@book.AuthorName</p>
         <p>@book.PublishedDate</p>
         <a asp-action="Details" asp-route-id="@book.Id">Details</a>
