--- a/LibraryManagement.Web/Views/Book/Details.cshtml
+++ b/LibraryManagement.Web/Views/Book/Details.cshtml
@@ -40,5 +40,6 @@
     if (currentUserId == Model.CreatorId)
     {
         <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning ms-2">Edit</a>
+        <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-warning ms-2">Delete</a>
     }
 }
