--- a/LibraryManagement.Web/Views/Book/Index.cshtml
+++ b/LibraryManagement.Web/Views/Book/Index.cshtml
@@ -2,6 +2,12 @@
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @model IEnumerable<BookIndexViewModel>
+<form asp-action="Index" method="get" class="mb-4">
+    <div class="input-group">
+        <input type="text" name="searchTerm" class="form-control" placeholder="Search by title, author, or genre" value="@Context.Request.Query["searchTerm"]" />
+        <button type="submit" class="btn btn-primary">Search</button>
+    </div>
+</form>
 @foreach (var book in Model)
 {
     <div>
