Added functionality for users to apply for membership with the appropriate services, controllers, view models and views.

--- a/LibraryManagement.Web/Views/Home/Index.cshtml
+++ b/LibraryManagement.Web/Views/Home/Index.cshtml
@@ -9,3 +9,6 @@
 <a asp-controller="Book" asp-action="Index" class="btn btn-primary">
     All Books
 </a>
+<a asp-controller="Membership" asp-action="Apply" class="btn btn-primary">
+    Apply for membership
+</a>
