--- a/LibraryManagement.Web/Views/Home/Index.cshtml
+++ b/LibraryManagement.Web/Views/Home/Index.cshtml
@@ -12,3 +12,6 @@
 <a asp-controller="Membership" asp-action="Apply" class="btn btn-primary">
     Apply for membership
 </a>
+<a asp-controller="User" asp-action="Dashboard" class="btn btn-primary">
+    User Dashboard
+</a>
