--- a/LibraryManagement.Web/Views/Home/Index.cshtml
+++ b/LibraryManagement.Web/Views/Home/Index.cshtml
@@ -15,3 +15,6 @@
 <a asp-controller="User" asp-action="Dashboard" class="btn btn-primary">
     User Dashboard
 </a>
+<a asp-controller="BorrowingRecord" asp-action="History" class="btn btn-primary">
+    Borrowing Record History
+</a>
