Added functionality to check out all authors in the db and to search for them by name

--- a/LibraryManagement.Web/Views/Home/Index.cshtml
+++ b/LibraryManagement.Web/Views/Home/Index.cshtml
@@ -18,3 +18,6 @@
 <a asp-controller="BorrowingRecord" asp-action="History" class="btn btn-primary">
     Borrowing Record History
 </a>
+<a asp-controller="Author" asp-action="Index" class="btn btn-primary">
+    All Authors
+</a>
