--- a/LibraryManagement.Web/Views/Book/Index.cshtml
+++ b/LibraryManagement.Web/Views/Book/Index.cshtml
@@ -19,7 +19,7 @@
     </div>
 }
 
-@if (SignInManager.IsSignedIn(User))
+@if (User.IsInRole("Admin"))
 {
     <div class="mb-3">
         <a asp-action="Create" class="btn btn-success">Add New Book</a>
