--- a/LibraryManagement.Web/Views/Home/Index.cshtml
+++ b/LibraryManagement.Web/Views/Home/Index.cshtml
@@ -21,3 +21,6 @@
 <a asp-controller="Author" asp-action="Index" class="btn btn-primary">
     All Authors
 </a>
+<a asp-controller="FavouriteList" asp-action="Index" class="btn btn-primary">
+    My favourite books
+</a>
