--- a/LibraryManagement.Web/Views/Shared/_Layout.cshtml
+++ b/LibraryManagement.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Dashboard">Admin Dashboard</a>
+                                <a asp-area="Admin" asp-controller="Admin" asp-action="Dashboard">Dashboard</a>
                             </li>
                         }
                     </ul>
