--- a/LibraryManagement.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/LibraryManagement.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using LibraryManagement.Web
 @using LibraryManagement.Web.ViewModels.Membership
+@using LibraryManagement.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
