All warnings have been resolved, some messages as well

--- a/LibraryManagement.Web/Areas/Admin/Views/ReviewModeration/PendingReviews.cshtml
+++ b/LibraryManagement.Web/Areas/Admin/Views/ReviewModeration/PendingReviews.cshtml
@@ -51,9 +51,9 @@ else
                     </td>
                 </tr>
             }
-            <li class="nav-item">
-                <a asp-area="Admin" asp-controller="Admin" asp-action="Dashboard">Back to Dashboard</a>
-            </li>
         </tbody>
     </table>
 }
+<a asp-area="Admin" asp-controller="Admin" asp-action="Dashboard" class="btn btn-secondary mt-3">
+    Back to Dashboard
+</a>
