--- a/LibraryManagement.Web/Views/Book/Details.cshtml
+++ b/LibraryManagement.Web/Views/Book/Details.cshtml
@@ -18,7 +18,7 @@
         <dd class="col-sm-10">@Model.Genre</dd>
 
         <dt class="col-sm-2">Published Date</dt>
-        <dd class="col-sm-10">@Model.PublishedDate.ToString("MMMM dd, yyyy")</dd>
+        <dd class="col-sm-10">@Model.PublishedDate.ToString("dd-MM-yyyy")</dd>
 
         <dt class="col-sm-2">Description</dt>
         <dd class="col-sm-10">@Model.Description</dd>
