Improving UI for Home page, moved buttons for favourites list and borrowing history inside the user dashboard

--- a/LibraryManagement.Web/Views/Home/Privacy.cshtml
+++ b/LibraryManagement.Web/Views/Home/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>I promise I will not steal any of your personal data.</p>
