--- a/LibraryManagement.Web/Views/Book/Index.cshtml
+++ b/LibraryManagement.Web/Views/Book/Index.cshtml
@@ -3,6 +3,9 @@
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @model PagedResult<BookIndexViewModel>
+
+<h2>All Books</h2>
+
 <form asp-action="Index" method="get" class="mb-4">
     <div class="input-group">
         <input type="text" name="searchTerm" class="form-control" placeholder="Search by title, author, or genre" value="@Context.Request.Query["searchTerm"]" />
