--- a/LibraryManagement.Web/Views/Home/Index.cshtml
+++ b/LibraryManagement.Web/Views/Home/Index.cshtml
@@ -2,25 +2,47 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to the best place to borrow a book on this side of the galaxy!</h1>
-    
+<div class="home-fullscreen-bg">
+    <div class="fullscreen-overlay d-flex align-items-center">
+        <div class="container-fluid text-center text-white">
+            <h1 class="display-4">Welcome to the best place to borrow a book on this side of the galaxy!</h1>
+            <p class="lead">Discover books, authors, and become a member today.</p>
+
+            <div class="row justify-content-center g-4 mt-5">
+                <div class="col-md-4 d-flex">
+                    <div class="card flex-fill text-dark shadow">
+                        <div class="card-body d-flex flex-column justify-content-between">
+                            <p class="card-text">📚 Check out our huge collection of books and find the right one for you to borrow!</p>
+                            <a asp-controller="Book" asp-action="Index" class="btn btn-outline-primary mt-3">Browse All Books</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 d-flex">
+                    <div class="card flex-fill text-dark shadow">
+                        <div class="card-body d-flex flex-column justify-content-between">
+                            <p class="card-text">✍️ Not sure which book you might want to borrow? Get a quick glance at all the authors available!</p>
+                            <a asp-controller="Author" asp-action="Index" class="btn btn-outline-secondary mt-3">View All Authors</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 d-flex">
+                    <div class="card flex-fill text-dark shadow">
+                        <div class="card-body d-flex flex-column justify-content-between">
+                            <p class="card-text">✅ Found the book that you want to borrow? Apply now for membership!</p>
+                            @if (User.Identity?.IsAuthenticated == true)
+                            {
+                                <a asp-controller="Membership" asp-action="Apply" class="btn btn-success mt-3">Apply for Membership</a>
+                            }
+                            else
+                            {
+                                <a asp-area="Identity" asp-page="/Account/Login" class="btn btn-success mt-3">Login to Apply</a>
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<a asp-controller="Book" asp-action="Index" class="btn btn-primary">
-    All Books
-</a>
-<a asp-controller="Membership" asp-action="Apply" class="btn btn-primary">
-    Apply for membership
-</a>
-<a asp-controller="User" asp-action="Dashboard" class="btn btn-primary">
-    User Dashboard
-</a>
-<a asp-controller="BorrowingRecord" asp-action="History" class="btn btn-primary">
-    Borrowing Record History
-</a>
-<a asp-controller="Author" asp-action="Index" class="btn btn-primary">
-    All Authors
-</a>
-<a asp-controller="FavouriteList" asp-action="Index" class="btn btn-primary">
-    My favourite books
-</a>
