--- a/LibraryManagement.Web/Views/BorrowingRecord/History.cshtml
+++ b/LibraryManagement.Web/Views/BorrowingRecord/History.cshtml
@@ -13,7 +13,7 @@
 }
 else
 {
-    <table class="table table-striped">
+    <table class="table table-dark table-striped rounded shadow-sm">
         <thead>
             <tr>
                 <th>Book Title</th>
@@ -33,3 +33,6 @@ else
         </tbody>
     </table>
 }
+<a asp-controller="User" asp-action="Dashboard" class="btn btn-outline-primary mt-4">
+    ← Back to User Dashboard
+</a>
