--- a/LibraryManagement.Web/Views/User/Dashboard.cshtml
+++ b/LibraryManagement.Web/Views/User/Dashboard.cshtml
@@ -27,9 +27,11 @@
         }
     }
 </div>
-<a asp-controller="BorrowingRecord" asp-action="History" class="btn btn-primary">
-    Borrowing Record History
-</a>
-<a asp-controller="FavouriteList" asp-action="Index" class="btn btn-primary">
-    My favourite books
-</a>
+<div class="text-center mt-4 d-flex justify-content-center flex-wrap gap-3">
+    <a asp-controller="BorrowingRecord" asp-action="History" class="btn btn-outline-light">
+        Borrowing Record History
+    </a>
+    <a asp-controller="FavouriteList" asp-action="Index" class="btn btn-outline-light">
+        My Favourite Books
+    </a>
+</div>
