--- a/LibraryManagement.Web/Areas/Admin/Views/Admin/ReviewApplications.cshtml
+++ b/LibraryManagement.Web/Areas/Admin/Views/Admin/ReviewApplications.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Pending Membership Applications</h2>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-dark">
     <thead>
         <tr>
             <th>Name</th>
