--- a/LibraryManagement.Web/Areas/Admin/Views/ReviewModeration/PendingReviews.cshtml
+++ b/LibraryManagement.Web/Areas/Admin/Views/ReviewModeration/PendingReviews.cshtml
@@ -14,7 +14,7 @@
 }
 else
 {
-    <table class="table table-striped">
+    <table class="table table-striped table-dark">
         <thead>
             <tr>
                 <th>Book</th>
