--- a/LibraryManagement.Web/Views/FavouriteList/Index.cshtml
+++ b/LibraryManagement.Web/Views/FavouriteList/Index.cshtml
@@ -22,7 +22,7 @@
 }
 else
 {
-    <table class="table table-striped">
+    <table class="table table-dark table-striped rounded shadow-sm">
         <thead>
             <tr>
                 <th>Cover</th>
@@ -62,3 +62,6 @@ else
         </tbody>
     </table>
 }
+<a asp-controller="User" asp-action="Dashboard" class="btn btn-outline-primary mt-4">
+    ← Back to User Dashboard
+</a>
