--- a/LibraryManagement.Web/Views/Shared/_Layout.cshtml
+++ b/LibraryManagement.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark text-light box-shadow mb-0">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark text-light box-shadow mb-1">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LibraryManagement.Web</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -31,7 +31,7 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
-                                <a asp-area="Admin" asp-controller="Admin" asp-action="Dashboard">Dashboard</a>
+                                <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="Dashboard"> Admin Dashboard</a>
                             </li>
                         }
                     </ul>
