--- a/LibraryManagement.Web/Views/Review/Edit.cshtml
+++ b/LibraryManagement.Web/Views/Review/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using LibraryManagement.Web.ViewModels.Review
-@model ReviewViewModel
+@model ReviewInputModel
 
 <h2>@(Model.ReviewId == Guid.Empty ? "Write a Review" : "Edit Your Review")</h2>
 
