--- a/LibraryManagement.Web/Views/Author/Index.cshtml
+++ b/LibraryManagement.Web/Views/Author/Index.cshtml
@@ -5,7 +5,7 @@
 <h2>All Authors</h2>
 
 <form asp-action="Index" method="get" class="mb-3">
-    <input type="text" name="searchTerm" placeholder="Search authors..." class="form-control" />
+    <input type="text" name="searchTerm" value="@ViewData["SearchTerm"]" placeholder="Search authors..." class="form-control" />
 </form>
 
 @foreach (var author in Model.Items)
@@ -28,7 +28,7 @@
             <a class="page-link"
                asp-action="Index"
                asp-route-searchTerm="@ViewData["SearchTerm"]"
-               asp-route-page="@(Model.PageNumber - 1)"
+               asp-route-pageNumber="@(Model.PageNumber - 1)"
                asp-route-pageSize="@Model.PageSize">
                 Previous
             </a>
@@ -37,7 +37,7 @@
             <a class="page-link"
                asp-action="Index"
                asp-route-searchTerm="@ViewData["SearchTerm"]"
-               asp-route-page="@(Model.PageNumber + 1)"
+               asp-route-pageNumber="@(Model.PageNumber + 1)"
                asp-route-pageSize="@Model.PageSize">
                 Next
             </a>
