--- a/LibraryManagement.Web/Views/Author/Index.cshtml
+++ b/LibraryManagement.Web/Views/Author/Index.cshtml
@@ -3,7 +3,12 @@
 @model PagedResult<AuthorWithBooksViewModel>
 
 <h2>All Authors</h2>
-
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["ErrorMessage"]
+    </div>
+}
 <form asp-action="Index" method="get" class="mb-3">
     <input type="text" name="searchTerm" value="@ViewData["SearchTerm"]" placeholder="Search authors..." class="form-control" />
 </form>
