--- a/LibraryManagement.Web/Areas/Admin/Views/Admin/Members.cshtml
+++ b/LibraryManagement.Web/Areas/Admin/Views/Admin/Members.cshtml
@@ -6,7 +6,14 @@
 }
 
 <h2>Approved Members</h2>
-
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">@TempData["SuccessMessage"]</div>
+}
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">@TempData["ErrorMessage"]</div>
+}
 <table class="table table-bordered table-dark table-striped mt-4">
     <thead class="table-dark">
         <tr>
