Added tests for BookService

--- a/LibraryManagement.Web/Views/Book/Edit.cshtml
+++ b/LibraryManagement.Web/Views/Book/Edit.cshtml
@@ -29,7 +29,7 @@
 
     <div class="form-group">
         <label asp-for="PublishedDate" class="control-label"></label>
-        <input asp-for="PublishedDate" class="form-control" type="date" />
+        <input asp-for="PublishedDate" class="form-control" type="text" />
         <span asp-validation-for="PublishedDate" class="text-danger"></span>
     </div>
 
