--- a/LibraryManagement.Web/Views/Shared/_LoginPartial.cshtml
+++ b/LibraryManagement.Web/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+            <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name?.Split('@')[0]!</a>
         </li>
         <li class="nav-item">
             <form method="post" asp-controller="Account" asp-action="Logout" asp-route-returnUrl="/">
