--- a/LibraryManagement.Web/Views/Home/Index.cshtml
+++ b/LibraryManagement.Web/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                     <div class="card flex-fill text-dark shadow">
                         <div class="card-body d-flex flex-column justify-content-between">
                             <p class="card-text">✍️ Not sure which book you might want to borrow? Get a quick glance at all the authors available!</p>
-                            <a asp-controller="Author" asp-action="Index" class="btn btn-outline-secondary mt-3">View All Authors</a>
+                            <a asp-controller="Author" asp-action="Index" class="btn btn-outline-primary mt-3">View All Authors</a>
                         </div>
                     </div>
                 </div>
