--- a/LibraryManagement.Web/Views/Review/Edit.cshtml
+++ b/LibraryManagement.Web/Views/Review/Edit.cshtml
@@ -26,7 +26,9 @@
         <span asp-validation-for="Content" class="text-danger"></span>
     </div>
 
+    <div class="mt-3">
     <button type="submit" class="btn btn-primary">Submit Review</button>
+    </div>
 </form>
 
 @section Scripts {
